# Self-Driving-Comps

./: .gitignore  1_scenario_curved_road.world  2_scenario_follow_object_straight_road.world  3_scenario_intersection.world  4_scenario_object_field.world  5_scenario_avoiding_obstacles_in_road.world  6_scenario_back_90_park.world  Angle.cc  CMakeLists.txt  README.md  VehiclePlugin.cc  VehiclePlugin.hh  Waypoint.cc  Waypoint.hh  angle.cc  angle.hh  asdad.world  camera_listener.cc  car_gps.cc  car_gps.hh  charles-mini-test-world.world  charles_test_world.world  compile  flatparistest.world  gps_units.csv  hello.world  laser_car.cc  laser_car.cpp  laser_car.hh  model_car.cpp  model_pull.cpp  model_push.cc  model_push.world  objectField.erb  paris.world  realtestcar.world  realtestcar.world.erb  realtestcar.world.sdf  sdc.world  sdcAngle.cc  (+42 more)
OpenCV/: haarcascade.xml  haarcascade_stop.xml  lanedetection.cpp
OpenCV/CompsLaneDetection/CompsLaneDetection/: cascade.xml  main.cpp
OpenCV/CompsLaneDetection/CompsLaneDetection.xcodeproj/: project.pbxproj
OpenCV/CompsLaneDetection/CompsLaneDetection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenCV/CompsLaneDetection/CompsLaneDetection.xcodeproj/project.xcworkspace/xcshareddata/: CompsLaneDetection.xccheckout
OpenCV/CompsLaneDetection/CompsLaneDetection.xcodeproj/xcuserdata/selfcar.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenCV/CompsLaneDetection/CompsLaneDetection.xcodeproj/xcuserdata/selfcar.xcuserdatad/xcschemes/: CompsLaneDetection.xcscheme  xcschememanagement.plist
models/asphalt_plane/: .model.rsdf.swp  blockbevel.dae  model.rsdf  model.sdf
models/comps_road/: model-1_4.sdf  model.config  model.sdf
models/comps_road/materials/scripts/: asphalt.material  comps_road.material
models/comps_road_short/: model.sdf
models/comps_road_short/materials/scripts/: asphalt.material
models/ground_plane/: model.sdf
models/intersection/: model.config  model.sdf
models/intersection/materials/scripts/: intersection.material
models/lane_divider/: model.config  model.sdf
models/minicooper/: model.config  model.sdf  wheel.stl
models/sdcCar/: minicooper-nowheels.stl  model.config  sdcCar.sdf  testcar.dae
models/static_car/: model.config  model.sdf
models/utility_cart/: model.config  utility_cart.sdf
utility_cart/: utility_cart.sdf
